--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Mis estilos -->
     <link rel="stylesheet" href="./styles.css">
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="./register.html">Registrarse</a>
                     </li>
                     <li class="nav-item btn btn-danger">
-                      <a class="nav-link active" aria-current="page" href="./gallery.html">Galeria</a>
+                        <a class="nav-link active" aria-current="page" href="#">Galeria</a>
                     </li>
                     <li class="nav-item btn btn-danger">
                         <a class="nav-link active" aria-current="page" href="#">FAQ</a>
@@ -53,42 +53,7 @@
         </div>
     </nav>
     <main class="container">
-        <form class="container w-50 my-3 p-4 bg-danger d-flex flex-column text-white">
-            <div class="form-row">
-              <div class="form-group">
-                <label for="inputEmail4">Correo Electrónico</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <label for="inputPassword4">Contraseña</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Contraseña">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="inputAddress">Dirección</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Av / Calle / Jr">
-            </div>
-            <div class="form-row">
-              <div class="form-group">
-                <label for="inputCity">Ciudad</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="form-group">
-                <label for="inputState">Pais</label>
-                <select id="inputState" class="form-control">
-                  <option selected>Seleccione...</option>
-                  <option>Perú</option>
-                  <option>Argentina</option>
-                  <option>Uruguay</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="inputZip">Código Postal</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary mt-3 align-self-center">Registrarse</button>
-          </form>
+     
     </main>
     <footer class="position-absolute w-100 bottom-0 text-center card bg-danger">
       <div class="card-body">
