--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles.css">
-
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-
+    <!-- Mis estilos -->
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <nav class="container-fluid navbar navbar-expand-lg navbar-dark bg-danger">
+<header>
+    <nav class="container-fluid navbar navbar-expand-lg navbar-dark bg-danger mb-2">
         <div class="container-lg">
             <img src="./assets/fav3.png" alt="NewsNow Logo" class="navbar-brand">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,7 +36,7 @@
                         <a class="nav-link active" aria-current="page" href="./register.html">Registrarse</a>
                     </li>
                     <li class="nav-item btn btn-danger">
-                        <a class="nav-link active" aria-current="page" href="#">Galeria</a>
+                        <a class="nav-link active" aria-current="page" href="./gallery.html">Galeria</a>
                     </li>
                     <li class="nav-item btn btn-danger">
                         <a class="nav-link active" aria-current="page" href="#">FAQ</a>
@@ -49,8 +49,8 @@
             </div>
         </div>
     </nav>
-    <nav class="container-fluid nav-categorias">
-        <div class="container-lg d-flex flex-wrap btn-group mt-2" role="group" aria-label="Basic example">
+    <nav class="container-fluid nav-categorias mb-2">
+        <div class="container-lg d-flex flex-wrap btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-danger">Política</button>
             <button type="button" class="btn btn-danger">Deportes</button>
             <button type="button" class="btn btn-danger">Farándula</button>
@@ -61,16 +61,18 @@
             <button type="button" class="btn btn-danger">Otros</button>
         </div>
     </nav>
-    <header class="container-lg mb-2 mt-2 portada">
-        <div class="container-sm portada__data">
+</header>
+<main class="container">
+    <article class="portada">
+        <div class="portada__data">
             <h2>Noticia Principal</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui enim deleniti aspernatur illo, repudiandae
                 voluptatum, explicabo cupiditate, rem possimus nam eveniet incidunt reprehenderit eum nihil totam dolore
                 eius in porro.</p>
             <a class="button" href="#">Más información...</a>
         </div>
-    </header>
-    <section class="container mb-2 mt-2 noticias">
+    </article>
+    <section class="mb-2 mt-2 noticias">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <article class="card">
@@ -79,7 +81,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -90,7 +92,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                        <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -101,7 +103,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -112,7 +114,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -123,7 +125,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -134,21 +136,21 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                        <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
         </div>
     </section>
-    <section class="container-lg mb-2 mt-2 banner banner--1">
-        <div class="content mx-sm-5">
+    <section class="mb-2 mt-2 banner banner--1">
+        <div class="portada__data mx-sm-5">
             <h2>Lorem ipsum dolor sit amet.</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat rem id eos minima illum repudiandae quis
                 eaque velit aperiam sequi!</p>
             <a href="#" class="button">Leer Más...</a>
         </div>
     </section>
-    <section class="container mb-2 mt-2 noticias">
+    <section class="mb-2 mt-2 noticias">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <article class="card">
@@ -157,7 +159,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -168,7 +170,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                        <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -179,7 +181,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -190,7 +192,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -201,7 +203,7 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                            <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
@@ -212,23 +214,25 @@
                         <h3>Adicción a los videojuegos</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente tempora eveniet dignissimos ullam ut
                             nihil iste assumenda dicta. Enim, dolor.</p>
-                        <a href="#">Leer Más...</a>
+                        <a href="#" class="button">Leer Más...</a>
                     </div>
                 </article>
             </div>
         </div>
     </section>
-    <section class="container-lg mb-2 mt-2 banner banner--2">
-        <div class="content mx-sm-5">
-        <h2>Lorem ipsum dolor sit amet.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat rem id eos minima illum repudiandae quis
-            eaque velit aperiam sequi!</p>
-        <a href="#" class="button">Leer Más...</a>
+    <section class="mb-2 mt-2 banner banner--2">
+        <div class="portada__data mx-sm-5">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat rem id eos minima illum repudiandae quis
+                eaque velit aperiam sequi!</p>
+            <a href="#" class="button">Leer Más...</a>
         </div>
     </section>
-    <footer class="social">
-        <p>Siguenos en nuestras redes sociales:</p>
-        <div class="links">
+</main>
+<footer class="text-center card bg-danger">
+    <div class="card-body">
+        <p class="card-title text-white">Siguenos en nuestras redes sociales:</p>
+        <div class="d-flex justify-content-evenly card-text">
             <a href="#">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
@@ -239,7 +243,8 @@
                 <i class="fa-brands fa-pinterest-p"></i>
             </a>
         </div>
-    <footer>
+    </div>
+</footer>
 </body>
 
 </html>
